@@ -33,7 +33,7 @@ $wgConf = new SiteConfiguration;
 /** @endcond */
 
 /** MediaWiki version number */
-$wgVersion = '1.19.0beta1';
+$wgVersion = '1.19.0beta2';
 
 /** Name of the site. It must be changed in LocalSettings.php */
 $wgSitename = 'MediaWiki';
@@ -2578,13 +2578,6 @@ $wgResourceLoaderMaxage = array(
 		'client' => 5 * 60, // 5 minutes
 	),
 );
-
-/**
- * Whether to embed private modules inline with HTML output or to bypass
- * caching and check the user parameter against $wgUser to prevent
- * unauthorized access to private modules.
- */
-$wgResourceLoaderInlinePrivateModules = true;
 
 /**
  * The default debug mode (on/off) for of ResourceLoader requests. This will still
